k8s/interactive-video/api/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: "interactive-video-api-svc"
  labels:
    app: "interactive-video-api"
spec:
  selector:
      app: "interactive-video-api"
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
