k8s/interactive-video/api/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: interactive-video-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: api.interactive-video
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: interactive-video-api-svc
                port:
                  number: 80
